@@ -1,43 +1,0 @@
-<?xml version='1.0' standalone='yes'?>
-  <div style="padding: 1em;"
-    xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:var="http://www.skyrix.com/od/binding"
-    xmlns:const="http://www.skyrix.com/od/constant"
-    xmlns:uix="OGo:uix"
-    xmlns:rsrc="OGo:url"
-    xmlns:label="OGo:label">
-    <h2>
-      SOGo Mail - <var:string value="objectTitle" />
-      
-      <var:if condition="clientObject.isSharedAccount">
-        <var:string label:value="Shared Account: " />
-      </var:if>
-      
-    </h2>
-    <var:if condition="clientObject.isSharedAccount">
-      <div>
-        <var:string label:value="Share: " />
-        <var:string value="clientObject.sharedAccountName" />
-      </div>
-    </var:if>
-    
-    <h3>Email</h3>
-    <p>
-      <a href="INBOX/" onclick="initMailboxSelection(currentMailbox + '/INBOX'); openMailbox(currentMailbox + '/INBOX'); return false;"><img rsrc:src="read-messages.png" /><var:string label:value="Read messages" /></a><br />
-      <a href="#" onclick="clickedCompose(this);"><img rsrc:src="write-message.png" /><var:string label:value="Write a new message" /></a><br />
-    </p>
-
-    <h3>Accounts</h3>
-    <p>
-      <a href=""><img rsrc:src="account-settings.png" />View settings for this account</a><br />
-      <a href=""><img rsrc:src="create-account.png" />Create a new account</a> [TBD: not in Agenor]<br />
-    </p>
-    
-    <h3>Advanced Features</h3>
-    <p>
-      <a href=""><img rsrc:src="search-messages.png" />Search messages</a><br />
-      <a href=""><img rsrc:src="manage-filters.png" />Manage message filters</a><br />
-      <a href=""><img rsrc:src="manage-imap.png" />Manage folder subscriptions</a><br />
-      <a href=""><img rsrc:src="offline-settings.png" />Offline settings</a> [TBD: not in Agenor]<br />
-    </p>
-  </div>
